@@ -1611,6 +1611,8 @@ ags_jack_devout_port_play(AgsSoundcard *soundcard,
   AgsJackClient *jack_client;
   AgsJackDevout *jack_devout;
 
+  AgsNotifySoundcard *notify_soundcard;
+  
   AgsMutexManager *mutex_manager;
   AgsTaskThread *task_thread;
 
@@ -1652,7 +1654,8 @@ ags_jack_devout_port_play(AgsSoundcard *soundcard,
   pthread_mutex_lock(mutex);
   
   jack_devout->flags &= (~AGS_JACK_DEVOUT_START_PLAY);
-
+  notify_soundcard = AGS_NOTIFY_SOUNDCARD(jack_devout->notify_soundcard);
+  
   if((AGS_JACK_DEVOUT_INITIALIZED & (jack_devout->flags)) == 0){
     pthread_mutex_unlock(mutex);
     
@@ -1752,16 +1755,16 @@ ags_jack_devout_port_play(AgsSoundcard *soundcard,
   }
 
   /* notify cyclic task */
-  pthread_mutex_lock(AGS_NOTIFY_SOUNDCARD(jack_devout->notify_soundcard)->return_mutex);
+  pthread_mutex_lock(notify_soundcard->return_mutex);
 
-  g_atomic_int_or(&(AGS_NOTIFY_SOUNDCARD(jack_devout->notify_soundcard)->flags),
+  g_atomic_int_or(&(notify_soundcard->flags),
 		  AGS_NOTIFY_SOUNDCARD_DONE_RETURN);
   
-  if((AGS_NOTIFY_SOUNDCARD_WAIT_RETURN & (g_atomic_int_get(&(AGS_NOTIFY_SOUNDCARD(jack_devout->notify_soundcard)->flags)))) != 0){
-    pthread_cond_signal(AGS_NOTIFY_SOUNDCARD(jack_devout->notify_soundcard)->return_cond);
+  if((AGS_NOTIFY_SOUNDCARD_WAIT_RETURN & (g_atomic_int_get(&(notify_soundcard->flags)))) != 0){
+    pthread_cond_signal(notify_soundcard->return_cond);
   }
   
-  pthread_mutex_unlock(AGS_NOTIFY_SOUNDCARD(jack_devout->notify_soundcard)->return_mutex);
+  pthread_mutex_unlock(notify_soundcard->return_mutex);
 
   if(task_thread != NULL){
     AgsTicDevice *tic_device;
@@ -1819,6 +1822,8 @@ ags_jack_devout_port_free(AgsSoundcard *soundcard)
 {
   AgsJackDevout *jack_devout;
 
+  AgsNotifySoundcard *notify_soundcard;
+  
   AgsMutexManager *mutex_manager;
 
   AgsApplicationContext *application_context;
@@ -1844,14 +1849,20 @@ ags_jack_devout_port_free(AgsSoundcard *soundcard)
   pthread_mutex_unlock(application_context->mutex);
 
   /*  */
+  pthread_mutex_lock(mutex);
+
+  notify_soundcard = AGS_NOTIFY_SOUNDCARD(jack_devout->notify_soundcard);
+
   if((AGS_JACK_DEVOUT_INITIALIZED & (jack_devout->flags)) == 0){
+    pthread_mutex_unlock(mutex);
+
     return;
   }
 
+  g_object_ref(notify_soundcard);
+  
   //  g_atomic_int_or(&(AGS_THREAD(application_context->main_loop)->flags),
   //		  AGS_THREAD_TIMING);
-
-  pthread_mutex_lock(mutex);
 
   callback_mutex = jack_devout->callback_mutex;
   callback_finish_mutex = jack_devout->callback_finish_mutex;
@@ -1866,8 +1877,6 @@ ags_jack_devout_port_free(AgsSoundcard *soundcard)
 		  AGS_JACK_DEVOUT_PASS_THROUGH);
   g_atomic_int_and(&(jack_devout->sync_flags),
 		   (~AGS_JACK_DEVOUT_INITIAL_CALLBACK));
-  
-  pthread_mutex_unlock(mutex);
 
   /* signal callback */
   pthread_mutex_lock(callback_mutex);
@@ -1894,20 +1903,20 @@ ags_jack_devout_port_free(AgsSoundcard *soundcard)
   pthread_mutex_unlock(callback_finish_mutex);
 
   /* notify cyclic task */
-  pthread_mutex_lock(AGS_NOTIFY_SOUNDCARD(jack_devout->notify_soundcard)->return_mutex);
+  pthread_mutex_lock(notify_soundcard->return_mutex);
 
-  g_atomic_int_or(&(AGS_NOTIFY_SOUNDCARD(jack_devout->notify_soundcard)->flags),
+  g_atomic_int_or(&(notify_soundcard->flags),
 		  AGS_NOTIFY_SOUNDCARD_DONE_RETURN);
   
-  if((AGS_NOTIFY_SOUNDCARD_WAIT_RETURN & (g_atomic_int_get(&(AGS_NOTIFY_SOUNDCARD(jack_devout->notify_soundcard)->flags)))) != 0){
-    pthread_cond_signal(AGS_NOTIFY_SOUNDCARD(jack_devout->notify_soundcard)->return_cond);
+  if((AGS_NOTIFY_SOUNDCARD_WAIT_RETURN & (g_atomic_int_get(&(notify_soundcard->flags)))) != 0){
+    pthread_cond_signal(notify_soundcard->return_cond);
   }
   
-  pthread_mutex_unlock(AGS_NOTIFY_SOUNDCARD(jack_devout->notify_soundcard)->return_mutex);
+  pthread_mutex_unlock(notify_soundcard->return_mutex);
 
+  g_object_unref(notify_soundcard);
+  
   /*  */
-  pthread_mutex_lock(mutex);
-
   jack_devout->note_offset = 0;
   jack_devout->note_offset_absolute = 0;
 
