@@ -1232,6 +1232,8 @@ ags_jack_midiin_port_free(AgsSequencer *sequencer)
   pthread_mutex_t *callback_mutex;
   pthread_mutex_t *callback_finish_mutex;
   
+  jack_midiin = AGS_JACK_MIDIIN(sequencer);
+
   application_context = ags_sequencer_get_application_context(sequencer);
   
   pthread_mutex_lock(application_context->mutex);
@@ -1244,8 +1246,6 @@ ags_jack_midiin_port_free(AgsSequencer *sequencer)
   pthread_mutex_unlock(application_context->mutex);
 
   pthread_mutex_lock(mutex);
-
-  jack_midiin = AGS_JACK_MIDIIN(sequencer);
 
   if((AGS_JACK_MIDIIN_INITIALIZED & (jack_midiin->flags)) == 0){
     pthread_mutex_unlock(mutex);
